<resources>
    <string name="app_name">Inventaris SMK Negeri 1 Batukliang</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SMK Negeri 1 Batukliang</string>
    <string name="nav_header_subtitle">smkn1batukliang@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sorry">Maaf</string>
    <string name="firebase_billing_plans">Paket penagihan Firebase masih menggunakan %s, harus ditingkatkan ke %s</string>
    <string name="spark">Spark (Tanpa biaya $0/bulan)</string>
    <string name="blaze">Blaze (Bayar sesuai pemakaian)</string>
    <string name="reminder">Pengingat!</string>
    <string name="do_not_change_the_default_email">Anda masuk menggunakan <b>email</b> default, silahkan perbarui <b>kata sandi</b> default-nya!, dan daftarkan <b>email baru</b> ke tingkat <b>Admin</b>!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="default_email">admin@gmail.com</string>
    <string name="admin">Admin</string>
    <string name="teacher">Guru</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="forget_password">Lupa Kata Sandi ?</string>
    <string name="sign_in">Masuk</string>
    <string name="confirm_password">Konfirmasi Sandi</string>
    <string name="sign_up">Daftar</string>
    <string name="new_email">Email Baru</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="level">Tingkat</string>
    <string name="edit">Sunting</string>
    <string name="save">Simpan</string>
    <string name="update">Perbarui</string>
    <string name="delete">Hapus</string>
    <string name="placement">Penempatan</string>
    <string name="inventories">Persedian</string>
    <string name="username">Nama Pengguna</string>
    <string name="procurement">Pengadaan</string>
    <string name="volume">Volume</string>
    <string name="unit">Satuan</string>
    <string name="price">Harga</string>
    <string name="description">Keterangan</string>
    <string name="procurement_purpose">Tujuan Pengadaan</string>
    <string name="knowing">Mengetahui</string>
    <string name="team_leader">Ketua Tim Pelaksana BOS</string>
    <string name="vice_principal">Wakil Kepala Sekolah Sarana dan Prasarana</string>
    <string name="approved">Disetujui</string>
    <string name="rejected">Ditolak</string>
    <string name="received">Diterima</string>
    <string name="principal">Kepala Sekolah</string>
    <string name="add_procurement">Tambah Pengadaan</string>
    <string name="add_placement">Tambah Penempatan</string>
    <string name="add_user">Tambah Pengguna</string>
    <string name="download">Unduh</string>
    <string name="sign_out">Keluar</string>
    <string name="home">Beranda</string>
    <string name="sub_menu_data">Data</string>
    <string name="sub_menu_addition">Tambahan</string>
    <string name="user">Pengguna</string>
    <string name="profile">Profil</string>
    <string name="employee_id_number">"NIP. "</string>
    <string name="position">Jabatan</string>
    <string name="update_email">Perbarui Email</string>
    <string name="update_password">Perbarui Kata Sandi</string>
    <string name="add_level">Tambah Tingkat</string>
    <string name="reset">Mengatur ulang</string>
    <string name="upload">Unggah</string>
    <string name="f_username">Pengguna %s</string>
    <string name="f_placement">Penempatan %s</string>
    <string name="email_required">Email diperlukan</string>
    <string name="unregistered_email">Email tidak terdaftar</string>
    <string name="successfully">Berhasil</string>
    <string name="password_required">Kata sandi diperlukan</string>
    <string name="authentication_failed">Otentikasi gagal, Email atau Kata Sandi Anda salah.</string>
    <string name="password_length">Kata sandi tidak boleh kurang dari 8 karakter</string>
    <string name="invalid_confirm_password">Konfirmasi Kata Sandi tidak sesuai</string>
    <string name="registration_failed">Pendaftaran gagal.</string>
    <string name="new_email_required">Email baru diperlukan</string>
    <string name="failed">Gagal</string>
    <string name="f_delete_users">Apakah Anda yakin, ingin menghapus %s</string>
    <string name="f_delete_procurement">Apakah Anda yakin, ingin menghapus pengadaan %s</string>
    <string name="f_delete_placement">Apakah Anda yakin, ingin menghapus penempatan %s</string>
    <string name="f_delete_report">Apakah Anda yakin ingin menghapus laporan %s</string>
    <string name="f_report_rejected">Harap berikan deskripsi <b>singkat</b> penolakan</string>
    <string name="f_procurement_approved">Apakah Anda yakin, setuju dengan laporan pengadaan %s</string>
    <string name="f_procurement_received">Apakah Anda yakin, sudah menerima dan sesuai dengan laporan  pengadaan %s</string>
    <string name="cancel">Batal</string>
    <string name="yes">Ya</string>
    <string name="agree">Menyetujui</string>
    <string name="placement_required">Penempatan diperlukan</string>
    <string name="username_required">Nama Pengguna diperlukan</string>
    <string name="select_listed_username">Pilih nama pengguna yang sesuai dan sudah terdaftar</string>
    <string name="procurement_required">Pengadaan diperlukan</string>
    <string name="price_required">Harga diperlukan</string>
    <string name="unit_required">Satuan diperlukan</string>
    <string name="volume_required">Volume diperlukan</string>
    <string name="procurement_purpose_required">Tujuan penggadaan diperlukan</string>
    <string name="team_leader_required">Ketua Tim diperlukan</string>
    <string name="date_procurement_required">Tanggal pengadaan diperlukan</string>
    <string name="vice_principal_required">Wakil Kepala Sekolah diperlukan</string>
    <string name="principal_required">Kepala Sekolah diperlukan</string>
    <string name="select_listed_ein_team_leader">Pilih Ketua Tim yang sesuai dan sudah terdaftar</string>
    <string name="select_listed_ein_vice_principal">Pilih Wakil kepala Sekolah yang sesuai dan sudah terdaftar</string>
    <string name="select_listed_ein_principal">Pilih Kepala Sekolah yang sesuai dan sudah terdaftar</string>
    <string name="f_delete_level">Apakah Anda yakin ingin menghapus tingkat %s</string>
    <string name="level_required">Tingkat diperlukan</string>
    <string name="select_listed_level">Pilih tingkat yang sesuai dan sudah terdaftar</string>
    <string name="email_not_verified">Email Belum Diverifikasi</string>
    <string name="send">Kirim</string>
    <string name="send_verification">email %s. Pilih Kirim untuk melanjutkan</string>
    <string name="verification">Verifikasi</string>
    <string name="email_verification_sent">Verifikasi email %s sudah terkirim</string>
    <string name="request_new_email">Apakah Anda yakin, ingin menggati email %s dengan yang baru</string>
    <string name="update_level">peningkatan akun pengguna berhasil</string>
    <string name="sub_menu_manage">Mengelola</string>
    <string name="date">Tanggal</string>
    <string name="download_report">Unduh Laporan</string>
    <string name="help">Bantuan</string>
    <string name="report">Laporan</string>
    <string name="up_down_report">Kirim dan unduh laporan</string>
    <string name="download_report_denied">Unduh laporan tidak bisa, izin ditolak</string>
    <string name="no_data_available_procurement">Tidak ada data pengadaan yang tersedia</string>
    <string name="no_data_available_placement_for_procurement">Tidak ada data penempatan yang tersedia, silahkan hubungi atau chat admin</string>
    <string name="no_data_available_placement">Tidak ada data penempatan yang tersedia</string>
    <string name="no_data_available_report">Tidak ada data laporan yang tersedia</string>
    <string name="no_data_available_users">Tidak ada data pengguna yang tersedia</string>
    <string name="no_data_available_levels">Tidak ada data tingkat pengguna yang tersedia</string>
    <string name="no_data_available">Tidak ada data yang tersedia</string>
    <string name="not_delete_report">Maaf, hubungi atasan Anda jika ingin menghapusnya!</string>
    <string name="f_level">Tingkat %s</string>
    <string name="password_confirm_required">Konfirmasi kata sandi diperlukan</string>
    <string name="sign_in_to_sign_up">Belum punya akun?</string>
    <string name="whatsapp_number">wa.me/</string>
    <string name="email_must_be_verified">Anda harus verifikasi email terlebih dahulu untuk terus menggunakan aplikasi</string>
    <string name="no_whatsapp_number">Tidak ada nomor whatsapp</string>
    <string name="new_password_required">Kata Sandi baru diperlukan</string>
    <string name="sign_up_to_sign_in">Sudah punya akun</string>
    <string name="reject">Tolak</string>
    <string name="open_in_new">Buka di Baru</string>
    <string name="room">Ruangan</string>
    <string name="goods">Barang</string>
    <string name="inventory_card">Karu Inventaris</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_inventory_card">Kartu Inventaris Barang</string>
    <string name="room_inventory_card">Kartu Inventaris Ruangan</string>
    <string name="title_activity_inventories">InventoriesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="back">Kembali</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="item_code">Kode Barang</string>
    <string name="item_name_item_type">Nama Barang/Jenis Barang</string>
    <string name="register_number">Nomor Register</string>
    <string name="brand_type">Merk/Type</string>
    <string name="size_cc">Ukuran/CC</string>
    <string name="ingredient">Bahan</string>
    <string name="year_of_purchase">Tahun Pembelian</string>
    <string name="factory">Pabrik</string>
    <string name="frame">Rangka</string>
    <string name="machine">Mesin</string>
    <string name="police">Polisi</string>
    <string name="book_vehicle_owners">BPKB</string>
    <string name="origin">Asal Usul</string>
    <string name="item_quantity">Jumlah barang</string>
</resources>