<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.levels.AddOrEditLevelFragment">

    <LinearLayout style="@style/LinearLayoutInventory">

        <ImageView
            android:id="@+id/img_icon"
            style="@style/ImageViewInventory"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/TextViewInventory"
            android:layout_gravity="center"
            android:text="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/TextInputLayoutInventoryDropdown"
            android:hint="@string/username">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_level"
            style="@style/TextInputLayoutInventoryDropdown"
            android:hint="@string/level">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/ButtonInventory"
            android:layout_gravity="end"
            android:text="@string/save"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update"
            style="@style/ButtonInventory"
            android:layout_gravity="end"
            android:text="@string/update"
            android:visibility="gone"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>