<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="id.sch.smkn1batukliang.inventory.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_grid_placement"
        android:name="id.sch.smkn1batukliang.inventory.ui.placement.GridPlacementFragment"
        android:label="@string/procurement"
        tools:layout="@layout/fragment_grid_placement">
        <action
            android:id="@+id/action_nav_grid_placement_to_add_or_edit_procurement"
            app:destination="@id/add_or_edit_procurement"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_grid_placement_to_list_procurement"
            app:destination="@id/list_procurement"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_grid_placement_to_nav_help"
            app:destination="@id/nav_help"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/list_procurement"
        android:name="id.sch.smkn1batukliang.inventory.ui.procurement.ListProcurementFragment"
        android:label="@string/procurement"
        tools:layout="@layout/fragment_list_procurement">
        <action
            android:id="@+id/action_list_procurement_to_nav_grid_placement"
            app:destination="@id/nav_grid_placement"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_list_procurement_to_add_or_edit_procurement"
            app:destination="@id/add_or_edit_procurement"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_list_procurement_to_add_report"
            app:destination="@id/add_report"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/add_or_edit_procurement"
        android:name="id.sch.smkn1batukliang.inventory.ui.procurement.AddOrEditProcurementFragment"
        android:label="@string/procurement"
        tools:layout="@layout/fragment_add_or_edit_procurement" />

    <fragment
        android:id="@+id/nav_list_placement"
        android:name="id.sch.smkn1batukliang.inventory.ui.placement.ListPlacementFragment"
        android:label="@string/placement"
        tools:layout="@layout/fragment_list_placement">
        <action
            android:id="@+id/action_nav_list_placement_to_add_or_edit_placement"
            app:destination="@id/add_or_edit_placement"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/add_or_edit_placement"
        android:name="id.sch.smkn1batukliang.inventory.ui.placement.AddOrEditPlacementFragment"
        android:label="@string/placement"
        tools:layout="@layout/fragment_add_or_edit_placement" />

    <fragment
        android:id="@+id/nav_inventories"
        android:name="id.sch.smkn1batukliang.inventory.ui.inventories.card.InventoriesFragment"
        android:label="@string/inventories"
        tools:layout="@layout/fragment_inventories">
    </fragment>

    <fragment
        android:id="@+id/list_goods"
        android:name="id.sch.smkn1batukliang.inventory.ui.inventories.card.goods.ListGoodsFragment"
        android:label="@string/goods"
        tools:layout="@layout/fragment_list_goods"/>

    <fragment
        android:id="@+id/list_rooms"
        android:name="id.sch.smkn1batukliang.inventory.ui.inventories.card.room.ListRoomFragment"
        android:label="@string/room"
        tools:layout="@layout/fragment_list_room">
        <action
            android:id="@+id/action_list_rooms_to_list_procurement"
            app:destination="@id/list_procurement" />
    </fragment>

    <fragment
        android:id="@+id/nav_list_user"
        android:name="id.sch.smkn1batukliang.inventory.ui.users.ListUserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_list_users">
        <action
            android:id="@+id/action_nav_list_user_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_list_level"
        android:name="id.sch.smkn1batukliang.inventory.ui.levels.ListLevelFragment"
        android:label="@string/level"
        tools:layout="@layout/fragment_list_level">
        <action
            android:id="@+id/action_nav_list_level_to_add_or_edit_level"
            app:destination="@id/add_or_edit_level"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/add_or_edit_level"
        android:name="id.sch.smkn1batukliang.inventory.ui.levels.AddOrEditLevelFragment"
        android:label="@string/level"
        tools:layout="@layout/fragment_add_or_edit_level" />

    <fragment
        android:id="@+id/nav_list_report"
        android:name="id.sch.smkn1batukliang.inventory.ui.report.ListReportFragment"
        android:label="@string/report"
        tools:layout="@layout/fragment_list_report">
        <action
            android:id="@+id/action_nav_list_report_to_edit_report"
            app:destination="@id/edit_report"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/edit_report"
        android:name="id.sch.smkn1batukliang.inventory.ui.report.EditReportFragment"
        android:label="@string/report"
        tools:layout="@layout/fragment_edit_report" />

    <fragment
        android:id="@+id/add_report"
        android:name="id.sch.smkn1batukliang.inventory.ui.report.AddReportFragment"
        android:label="@string/report"
        tools:layout="@layout/fragment_add_report">
        <action
            android:id="@+id/action_add_report_to_edit_report"
            app:destination="@id/edit_report"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="id.sch.smkn1batukliang.inventory.ui.users.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_nav_profile_to_update_email"
            app:destination="@id/update_email"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_profile_to_update_password"
            app:destination="@id/update_password"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/update_password"
        android:name="id.sch.smkn1batukliang.inventory.ui.users.profile.UpdatePasswordFragment"
        android:label="@string/update_password"
        tools:layout="@layout/fragment_update_password" >
        <action
            android:id="@+id/action_update_password_to_sign_in_activity"
            app:destination="@id/sign_in_activity"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/update_email"
        android:name="id.sch.smkn1batukliang.inventory.ui.users.profile.UpdateEmailFragment"
        android:label="@string/update_email"
        tools:layout="@layout/fragment_update_email" >
        <action
            android:id="@+id/action_update_email_to_sign_in_activity"
            app:destination="@id/sign_in_activity"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_help"
        android:name="id.sch.smkn1batukliang.inventory.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />

    <activity
        android:id="@+id/sign_in_activity"
        android:name="id.sch.smkn1batukliang.inventory.ui.auth.SignInActivity"
        android:label="activity_sign_in"
        tools:layout="@layout/activity_sign_in" />


</navigation>