<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ForgetPasswordActivity">

    <LinearLayout style="@style/LinearLayoutInventory">

        <ImageView
            android:id="@+id/img_icon"
            style="@style/ImageViewInventory"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/TextViewInventory"
            android:layout_gravity="center"
            android:text="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/TextInputLayoutInventory"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            style="@style/ButtonInventory"
            android:text="@string/reset"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>